--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -18,6 +18,7 @@
     </div>
   </div>
   <div>
+    <span ng-bind="vm.authentication.user.amountDue"></span> <b class="caret"></b>
     <h2>Congrats! You've configured and run the sample application.</h2>
     <p>MEAN.JS is a web application boilerplate, which means you should start changing everything :-)</p>
     <p>This sample application tracks users and articles.</p>
