--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -20,6 +20,49 @@
           </div>
         </div>
         <div class="form-group" show-errors>
+          <label for="address">Home Address </label>
+          <input type="text" id="address" name="address" class="form-control" ng-model="vm.user.address" placeholder="Address" required>
+          <div ng-messages="vm.userForm.address.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Address is required.</p>
+          </div>
+        </div>
+        <div class="form-group" show-errors>
+          <label for="quantity"> Milk Quantity (in Litres) </label>
+          <select id="quantity" name="quantity" class="form-control" ng-model="vm.user.quantity" required>
+            <option value="" disabled selected>---Please select---</option>
+            <option value="0.5"> 0.5 L (1 packet) </option>
+            <option value="1.0"> 1.0 L (2 packet) </option>
+            <option value="1.5"> 1.5 L (3 packet) </option>
+            <option value="2.0"> 2.0 L (4 packet) </option>
+          </select>
+          <div ng-messages="vm.userForm.quantity.$error" role="alert">
+            <p class="help-block error-text" ng-message="required"> Quantity is required.</p>
+          </div>
+        </div>
+        <div class="form-group" show-errors>
+          <label for="timeSlot"> Delivery Time Slot </label>
+          <select id="timeSlot" name="timeSlot" class="form-control" ng-model="vm.user.timeSlot" required>
+            <option value="" disabled selected>---Please select---</option>
+            <option value="7:00"> 7:00 - 7:30 AM </option>
+            <option value="7:30"> 7:30 - 8:00 AM </option>
+            <option value="8:00"> 8:00 - 8:30 AM </option>
+            <option value="8:30"> 8:30 - 9:00 AM </option>
+            <option value="9:00"> 9:00 - 9:30 AM </option>
+            <option value="9:30"> 9:30 - 10:00 AM </option>
+          </select>
+          <div ng-messages="vm.userForm.timeSlot.$error" role="alert">
+            <p class="help-block error-text" ng-message="required"> Time Slot is required.</p>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="amountDue"> Amount Due </label>
+          <input type="text" id="amountDue" name="amountDue" class="form-control" ng-model="vm.user.amountDue" placeholder="0" required>
+        </div>
+        <div class="form-group">
+          <label for="runningBill"> Running Bill </label>
+          <input type="text" id="runningBill" name="runningBill" class="form-control" ng-model="vm.user.runningBill" placeholder="" required>
+        </div>
+        <div class="form-group" show-errors>
           <label class="control-label" for="roles">Roles</label>
           <div class="controls">
             <input class="form-control" type="text" name="roles" ng-model="vm.user.roles" id="roles" ng-list required />
