--- a/modules/users/client/views/settings/edit-profile.client.view.html
+++ b/modules/users/client/views/settings/edit-profile.client.view.html
@@ -17,6 +17,41 @@
           </div>
         </div>
         <div class="form-group" show-errors>
+          <label for="address">Home Address</label>
+          <input type="text" id="address" name="address" class="form-control" ng-model="vm.user.address" placeholder="Address" required>
+          <div ng-messages="vm.userForm.address.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Address is required.</p>
+          </div>
+        </div>
+        <div class="form-group" show-errors>
+          <label for="quantity"> Milk Quantity (in Litres) </label>
+          <select id="quantity" name="quantity" class="form-control" ng-model="vm.user.quantity" required>
+            <option value="" disabled selected>---Please select---</option>
+            <option value="0.5"> 0.5 L (1 packet) </option>
+            <option value="1.0"> 1.0 L (2 packet) </option>
+            <option value="1.5"> 1.5 L (3 packet) </option>
+            <option value="2.0"> 2.0 L (4 packet) </option>
+          </select>
+          <div ng-messages="vm.userForm.quantity.$error" role="alert">
+            <p class="help-block error-text" ng-message="required"> Quantity is required.</p>
+          </div>
+        </div>
+        <div class="form-group" show-errors>
+          <label for="timeSlot"> Delivery Time Slot </label>
+          <select id="timeSlot" name="timeSlot" class="form-control" ng-model="vm.user.timeSlot" required>
+            <option value="" disabled selected>---Please select---</option>
+            <option value="7:00"> 7:00 - 7:30 AM </option>
+            <option value="7:30"> 7:30 - 8:00 AM </option>
+            <option value="8:00"> 8:00 - 8:30 AM </option>
+            <option value="8:30"> 8:30 - 9:00 AM </option>
+            <option value="9:00"> 9:00 - 9:30 AM </option>
+            <option value="9:30"> 9:30 - 10:00 AM </option>
+          </select>
+          <div ng-messages="vm.userForm.timeSlot.$error" role="alert">
+            <p class="help-block error-text" ng-message="required"> Time Slot is required.</p>
+          </div>
+        </div>
+        <div class="form-group" show-errors>
           <label for="email">Email</label>
           <input type="email" id="email" name="email" class="form-control" ng-model="vm.user.email" placeholder="Email" lowercase required>
           <div ng-messages="vm.userForm.email.$error" role="alert">
