--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -6,7 +6,14 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a ui-sref="home" class="navbar-brand">MEAN.JS</a>
+    <a ui-sref="home" class="navbar-brand">Gopi</a>
+  </div>
+  <div>
+    <ul class="nav navbar-nav">
+      <li> <a ui-sref="about"> About Us </a>  </li>
+      <li> <a ui-sref="contact"> Contact Us </a> </li>
+      <li> <a ui-sref="pricing"> Pricing </a> </li>
+    </ul>
   </div>
   <nav class="navbar-collapse" uib-collapse="!vm.isCollapsed" role="navigation">
     <ul class="nav navbar-nav" ng-if="vm.menu.shouldRender(vm.authentication.user);">
