--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -26,12 +26,11 @@
         </div>
         <div class="form-group" show-errors>
           <label for="quantity"> Milk Quantity (in Litres) </label>
-          <select id="quantity" name="quantity" class="form-control" ng-model="vm.credentials.quantity" required>
+          <select id="quantity" name="quantity" class="form-control" ng-model="vm.credentials.quantity" ng-change="vm.amount_select_change()" required>
             <option value="" disabled selected>---Please select---</option>
-            <option value="0.5"> 0.5 L (1 packet) </option>
-            <option value="1.0"> 1.0 L (2 packet) </option>
-            <option value="1.5"> 1.5 L (3 packet) </option>
-            <option value="2.0"> 2.0 L (4 packet) </option>
+            <option ng-repeat="amount in vm.amount_options" value="{{amount}}">
+              {{amount}} L
+            </option>
           </select>
           <div ng-messages="vm.userForm.quantity.$error" role="alert">
             <p class="help-block error-text" ng-message="required"> Quantity is required.</p>
@@ -41,12 +40,9 @@
           <label for="timeSlot"> Delivery Time Slot </label>
           <select id="timeSlot" name="timeSlot" class="form-control" ng-model="vm.credentials.timeSlot" required>
             <option value="" disabled selected>---Please select---</option>
-            <option value="7:00"> 7:00 - 7:30 AM </option>
-            <option value="7:30"> 7:30 - 8:00 AM </option>
-            <option value="8:00"> 8:00 - 8:30 AM </option>
-            <option value="8:30"> 8:30 - 9:00 AM </option>
-            <option value="9:00"> 9:00 - 9:30 AM </option>
-            <option value="9:30"> 9:30 - 10:00 AM </option>
+            <option ng-repeat="time in vm.time_options" value="{{time}}">
+              {{time}} AM - {{vm.time_options[$index+1] || '10:30'}} AM
+            </option>
           </select>
           <div ng-messages="vm.userForm.timeSlot.$error" role="alert">
             <p class="help-block error-text" ng-message="required"> Time Slot is required.</p>
