--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -27,6 +27,13 @@
           </div>
         </div>
         <div class="form-group" show-errors>
+          <label for="phoneNum">Phone Number</label>
+          <input type="text" id="phoneNum" name="phoneNum" class="form-control" ng-model="vm.user.phoneNum" placeholder="Phone Number" required>
+          <div ng-messages="vm.userForm.phoneNum.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Phone Number is required.</p>
+          </div>
+        </div>
+        <div class="form-group" show-errors>
           <label for="quantity"> Milk Quantity (in Litres) </label>
           <select id="quantity" name="quantity" class="form-control" ng-model="vm.user.quantity" required>
             <option value="" disabled selected>---Please select---</option>
