--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -5,69 +5,13 @@
   <div class="col-md-12">
     <form name="vm.userForm" ng-submit="vm.update(vm.userForm.$valid)" novalidate>
       <fieldset>
-        <div class="form-group" show-errors>
-          <label for="firstName">First Name</label>
-          <input type="text" id="firstName" name="firstName" class="form-control" ng-model="vm.user.firstName" placeholder="First Name" required autofocus />
-          <div ng-messages="vm.userForm.firstName.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">First name is required.</p>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label for="lastName">Last Name</label>
-          <input type="text" id="lastName" name="lastName" class="form-control" ng-model="vm.user.lastName" placeholder="Last Name" required />
-          <div ng-messages="vm.userForm.lastName.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Last name is required.</p>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label for="address">Home Address </label>
-          <input type="text" id="address" name="address" class="form-control" ng-model="vm.user.address" placeholder="Address" required>
-          <div ng-messages="vm.userForm.address.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Address is required.</p>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label for="phoneNum">Phone Number</label>
-          <input type="text" id="phoneNum" name="phoneNum" class="form-control" ng-model="vm.user.phoneNum" placeholder="Phone Number" required>
-          <div ng-messages="vm.userForm.phoneNum.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Phone Number is required.</p>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label for="quantity"> Milk Quantity (in Litres) </label>
-          <select id="quantity" name="quantity" class="form-control" ng-model="vm.user.quantity" required>
-            <option value="" disabled selected>---Please select---</option>
-            <option value="0.5"> 0.5 L (1 packet) </option>
-            <option value="1.0"> 1.0 L (2 packet) </option>
-            <option value="1.5"> 1.5 L (3 packet) </option>
-            <option value="2.0"> 2.0 L (4 packet) </option>
-          </select>
-          <div ng-messages="vm.userForm.quantity.$error" role="alert">
-            <p class="help-block error-text" ng-message="required"> Quantity is required.</p>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label for="timeSlot"> Delivery Time Slot </label>
-          <select id="timeSlot" name="timeSlot" class="form-control" ng-model="vm.user.timeSlot" required>
-            <option value="" disabled selected>---Please select---</option>
-            <option value="7:00"> 7:00 - 7:30 AM </option>
-            <option value="7:30"> 7:30 - 8:00 AM </option>
-            <option value="8:00"> 8:00 - 8:30 AM </option>
-            <option value="8:30"> 8:30 - 9:00 AM </option>
-            <option value="9:00"> 9:00 - 9:30 AM </option>
-            <option value="9:30"> 9:30 - 10:00 AM </option>
-          </select>
-          <div ng-messages="vm.userForm.timeSlot.$error" role="alert">
-            <p class="help-block error-text" ng-message="required"> Time Slot is required.</p>
-          </div>
-        </div>
         <div class="form-group">
           <label for="amountDue"> Amount Due </label>
           <input type="text" id="amountDue" name="amountDue" class="form-control" ng-model="vm.user.amountDue" placeholder="0" required>
         </div>
         <div class="form-group">
           <label for="runningBill"> Running Bill </label>
-          <input type="text" id="runningBill" name="runningBill" class="form-control" ng-model="vm.user.runningBill" placeholder="" required>
+          <input type="textarea" id="runningBill" name="runningBill" class="form-control" ng-model="vm.user.runningBill" placeholder="" required>
         </div>
         <div class="form-group" show-errors>
           <label class="control-label" for="roles">Roles</label>
@@ -77,6 +21,11 @@
               <p class="help-block error-text" ng-message="required">At least one role is required.</p>
             </div>
           </div>
+        </div>
+        <div class="form-group">
+          <label for="active"> Active:
+            <input type="checkbox" id="active" name="active" class="form-control" ng-model="vm.user.active">
+          </label>
         </div>
         <div class="form-group">
           <input type="submit" value="Update" class="btn btn-default">
