--- a/modules/users/client/views/settings/edit-profile.client.view.html
+++ b/modules/users/client/views/settings/edit-profile.client.view.html
@@ -3,20 +3,6 @@
     <form name="vm.userForm" ng-submit="vm.updateUserProfile(vm.userForm.$valid)" class="signin" novalidate autocomplete="off">
       <fieldset>
         <div class="form-group" show-errors>
-          <label for="firstName">First Name</label>
-          <input type="text" id="firstName" name="firstName" class="form-control" ng-model="vm.user.firstName" placeholder="First Name" required autofocus>
-          <div ng-messages="vm.userForm.firstName.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">First name is required.</p>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label for="lastName">Last Name</label>
-          <input type="text" id="lastName" name="lastName" class="form-control" ng-model="vm.user.lastName" placeholder="Last Name" required>
-          <div ng-messages="vm.userForm.lastName.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Last name is required.</p>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
           <label for="address">Home Address</label>
           <input type="text" id="address" name="address" class="form-control" ng-model="vm.user.address" placeholder="Address" required>
           <div ng-messages="vm.userForm.address.$error" role="alert">
@@ -43,6 +29,19 @@
           </div>
         </div>
         <div class="form-group" show-errors>
+          <label for="milkType"> Milk Type </label>
+          <select id="milkType" name="milkType" class="form-control" ng-model="vm.user.milkType" required>
+            <option value="" disabled selected>---Please select---</option>
+            <option ng-repeat="type in vm.type_options" value="{{type}}">
+              Double Toned: {{type['double-toned']}} L
+              Toned: {{type['toned']}} L
+            </option>
+          </select>
+          <div ng-messages="vm.userForm.quantity.$error" role="alert">
+            <p class="help-block error-text" ng-message="required"> Quantity is required.</p>
+          </div>
+        </div>
+        <div class="form-group" show-errors>
           <label for="timeSlot"> Delivery Time Slot </label>
           <select id="timeSlot" name="timeSlot" class="form-control" ng-model="vm.user.timeSlot" required>
             <option value="" disabled selected>---Please select---</option>
@@ -62,15 +61,12 @@
             <p class="help-block error-text" ng-message="email">Email address is invalid.</p>
           </div>
         </div>
-        <div class="form-group" show-errors>
-          <label for="username">Username</label>
-          <input type="text" id="username" name="username" class="form-control" ng-model="vm.user.username" placeholder="Username" lowercase required>
-          <div ng-messages="vm.userForm.username.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Username is required.</p>
-          </div>
+        <div class="form-group">
+          <label for="active"> Active Account </label>
+          <input type="checkbox" id="active" name="active" class="form-control" ng-model="vm.user.active">
         </div>
         <div class="text-center form-group">
-          <button type="submit" class="btn btn-primary">Save Profile</button>
+          <button type="submit" class="btn btn-primary">Save Order</button>
         </div>
       </fieldset>
     </form>
