--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -11,7 +11,7 @@
         </div>
         <div class="form-group">
           <label for="runningBill"> Running Bill </label>
-          <input type="textarea" id="runningBill" name="runningBill" class="form-control" ng-model="vm.user.runningBill" placeholder="" required>
+          <input type="textarea" rows="8" cols="60" id="runningBill" name="runningBill" class="form-control" ng-model="vm.user.runningBill" placeholder="" required>
         </div>
         <div class="form-group" show-errors>
           <label class="control-label" for="roles">Roles</label>
