validate fix + Admin Panel

--- a/modules/users/client/views/admin/list-users.client.view.html
+++ b/modules/users/client/views/admin/list-users.client.view.html
@@ -18,8 +18,9 @@
       </p>
       <p class="list-group-item-text">
         Time Slot: {{user.timeSlot}}
-        Toned: {{user.milkType["toned"]}}
-        Double Toned: {{user.milkType["double-toned"]}}
+      </p>
+      <p class="list-group-item-text text-center">
+      Milk Type: {{user.milkType}}
       </p>
     </a>
   </div>
