--- a/modules/users/client/views/admin/list-users.client.view.html
+++ b/modules/users/client/views/admin/list-users.client.view.html
@@ -7,6 +7,9 @@
       <div class="col-md-4" style="margin-top: 2em">
         <input class="form-control col-md-4" type="text" ng-model="vm.search" placeholder="Search" ng-change="vm.figureOutItemsToDisplay()" />
       </div>
+      <div class="col-md-4">
+        <a class="btn btn-primary btn-lg" ng-click="vm.pdf()">Print PDF</a>
+      </div>
     </div>
   </div>
   <div class="list-group">
