--- a/modules/users/client/views/admin/list-users.client.view.html
+++ b/modules/users/client/views/admin/list-users.client.view.html
@@ -8,7 +8,7 @@
         <input class="form-control col-md-4" type="text" ng-model="vm.search" placeholder="Search" ng-change="vm.figureOutItemsToDisplay()" />
       </div>
       <div class="col-md-4">
-        <a class="btn btn-primary btn-lg" ng-click="vm.pdf()">Print PDF</a>
+        <a class="btn btn-primary text-center" ng-click="vm.pdf()">Print PDF</a>
       </div>
     </div>
   </div>
