--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -29,6 +29,8 @@
         </div>
         <div class="form-group">
           <button type="button" value="Update" ng-click="vm.update(vm.userForm.$valid)" class="btn btn-default">
+            Update
+          </button>
         </div>
       </fieldset>
     </form>
